--- a/css/style.css
+++ b/css/style.css
@@ -495,6 +495,19 @@ a.image-gal {
   -o-transition: 0.5s all;
   -moz-transition: 0.5s all;
 }
+
+.news_grid2 {
+  
+  background: url(../images/o1.PNG) no-repeat 0px 0px;
+  background-size: cover;
+  min-height: 300px;
+  -webkit-transition: 0.5s all;
+  -ms-transition: 0.5s all;
+  -o-transition: 0.5s all;
+  -moz-transition: 0.5s all;
+}
+
+
 /* CSS for Image Animation */
 .animated-image {
   transition: transform 0.3s ease-in-out; /* Animation property and duration */
@@ -535,6 +548,8 @@ a.image-gal {
   letter-spacing: 2px;
   color: #000;
 }
+
+
 .news_grid_info p {
   font-size: 14px;
   letter-spacing: 0.5px;
@@ -559,12 +574,12 @@ a.image-gal {
 
 /* Your existing CSS styles remain unchanged */
 
-.gallery-container {
+.gallery-container,.gallery-container2 {
   display: none;
   margin-top: 20px;
 }
 
-.gallery-container img {
+.gallery-container,.gallery-container2 img {
   width: 100%;
   height: auto;
   margin-bottom: 10px;
@@ -577,7 +592,7 @@ a.image-gal {
       height: auto;
   }
 
-  .gallery-container img {
+  .gallery-container,.gallery-container2 img {
       margin-bottom: 5px;
   }
 }
@@ -1280,6 +1295,7 @@ ul.links li a:hover {
     max-width: 100%;
   }
   .news_grid4,
+  .news_grid2,
   .news_grid5,
   .news_grid6 {
     margin-bottom: 25px;
